# boardGame_algorithm_visualization

./: .gitignore  CLAUDE.md
.steering/20260222-backend-algorithm-plugin/: README.md
.steering/20260222-backend-game-plugin/: README.md
.steering/20260222-backend-websocket/: README.md
.steering/20260222-frontend-stores/: README.md
.steering/20260222-project-init/: README.md
.steering/20260223-frontend-board-plugin/: README.md
.steering/20260223-frontend-tree-view/: README.md
.steering/20260223-frontend-ui-layout/: README.md
.steering/20260223-frontend-websocket-client/: README.md
.steering/20260223-hide-lock-button/: README.md
.steering/20260223-kings-valley-bugfix/: README.md
.steering/20260223-kings-valley-integration/: README.md
.steering/20260223-mcts-backend/: README.md
.steering/20260223-mcts-frontend/: README.md
.steering/20260223-tree-ux-improvements/: README.md
backend/: main.py  pyproject.toml
backend/algorithms/: alpha_beta.py  base.py  mcts.py  minimax.py
backend/api/: websocket.py
backend/games/: base.py  kings_valley.py  tic_tac_toe.py
backend/schemas/: messages.py
backend/tests/: test_alpha_beta.py  test_minimax.py  test_tic_tac_toe.py
docs/: PRD.md  conventions.md  technical-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ControlBar.tsx  Header.tsx  MainLayout.tsx
frontend/src/services/: websocket.ts
frontend/src/stores/: connectionStore.ts  gameStore.ts  playbackStore.ts  treeStore.ts
(+13 files in other folders)
